[tool.poetry]
name = "mistdata"
version = "0.1.0"
description = ""
authors = ["lap1dem <vadym.bidula@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.20"
scipy = "^1.7"
#jupyter = "^1.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
PyQt5 = "^5.15.6"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
fpdf = "^1.7.2"
PyPDF2 = "^2.10.0"
h5py = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
